force-app/main/default/objects/Project__c/fields/Categary__c.field-meta.xml
<CustomField>
    <fullName>Categary__c</fullName>
    <label>Categary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soft Skills</fullName>
            </value>
            <value>
                <fullName>Technical Skills</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>